media/synclounge/sts.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: synclounge
  namespace: media
  annotations:
    flux.weave.works/automated: 'false'
    nginx.ingress.kubernetes.io/location-snippet: |
      return 301 http://s.desertbluffs.com$request_uri;
spec:
  serviceName: synclounge
  replicas: 1
  selector:
    matchLabels:
      app: synclounge
  template:
    metadata:
      labels:
        app: synclounge
    spec:
      containers:
      - name: synclounge
        image: starbix/synclounge@sha256:0e912bbe5f1fb471ff98cd471054baa2f0b2ca4bee34184fc1c470cd341acb0e
        ports:
        - name: slwebapp
          containerPort: 8088
        - name: slserver
          containerPort: 8089
