media/synclounge/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: synclounge
  namespace: media
spec:
  selector:
    app: synclounge
  ports:
  - name: slwebapp
    port: 8088
  - name: slserver
    port: 8089
