media/synclounge/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: synclounge
  namespace: media
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/enable-global-auth: "false"
spec:
  tls:
  - hosts:
    - s.desertbluffs.com
  rules:
  - host: s.desertbluffs.com
    http:
      paths:
      - path: /
        backend:
          serviceName: synclounge
          servicePort: 8088
      - path: /slserver
        backend:
          serviceName: synclounge
          servicePort: 8089
